fix odd wrapping issue in owner name

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ body {
     color: white;
     padding: 0.5em;
     border-radius: 8px;
+    text-wrap-mode: nowrap;
 }
 
 .matt {
